--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
-      # - name: Install Yarn
-      #   run: npm install -g yarn
       - id: yarn-cache-dir-path
         name: Get Yarn cache directory path
         run: echo "::set-output name=dir::$(yarn cache dir)"
-      - id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      - id: cache-yarn
         name: Attempt to use Yarn cache
         uses: actions/cache@v2
         with:
@@ -28,19 +26,28 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - name: Install dependencies
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-12-nodemodules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-12-nodemodules-
+      - if: |
+          steps.cache-yarn.outputs['cache-hit'] != 'true' ||
+          steps.cache-node-modules.outputs['cache-hit'] != 'true'
+        name: Install dependencies
         run: yarn install
-      - name: Run unit tests
+      - name: Unit tests
         run: yarn test
       - env:
           MAXMIND_ACCOUNT_ID: ${{ secrets.MAXMIND_ACCOUNT_ID }}
           MAXMIND_LICENSE_KEY: ${{ secrets.MAXMIND_LICENSE_KEY }}
-        name: Run end-to-end tests
+        name: End-to-end tests
         run: yarn test:e2e
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.DEPLOY_TOKEN }}
           publish_dir: ./dist
-
-
