--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@types/jest": "^26.0.13",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.6.4",
+    "@types/node-fetch": "^2.5.7",
     "dotenv": "^8.2.0",
     "fs-extra": "^9.0.1",
     "jest": "^26.4.2",
     "jest-openapi": "^0.9.4",
     "lodash": "^4.17.20",
-    "openapi-types": "^7.0.1",
+    "node-fetch": "^2.6.1",
+    "openapi-types": "^1.3.5",
     "openapi3-ts": "^1.4.0",
     "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
@@ -27,10 +29,9 @@
   "main": "index.js",
   "name": "api-specs",
   "scripts": {
-    "build": "ts-node-script src/compile",
+    "build": "ts-node-script build",
     "postinstall": "yarn build",
-    "test": "jest src",
-    "test:e2e": "yarn build && jest e2e"
+    "test": "yarn build && jest"
   },
   "version": "0.1.0"
 }
